# splash-cli-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: cd.yml  ci.yml
src/: main.rs
src/api/: mod.rs  models.rs  unsplash.rs
src/lib/utils/: mod.rs  photos.rs
