[package]
name = "splash"
version = "0.1.2"
authors = ["Rawnly <fedevitale99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dirs = "3.0.2"
image = "0.23.14"
isahc = "1.4.0"
quick-error = "2.0.1"
serde = "1.0.126"
serde_json = "1.0.64"
simple-storage = "0.0.2"
spinners = "1.2.0"
ureq = { version = "2.1.1", features = ["json"] }
url = "2.2.2"
wallpaper = "2.0.1"
