[package]
name = "splash"
version = "0.1.3"
authors = ["Rawnly <fedevitale99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dirs = "3.0"
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
self_update = "0.27"
spinners = "1.2"
url = "2.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wallpaper = "3"

# image = "0.23"
# quick-error = "2.0.1"
# simple-storage = "0.0.2"